--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        
+
     </head>
 <body>
+  <div class="fondo"></div>
+  
    <div class="wrap">
+        
         <header id="header">
             <div class="logo-container">
-                <img src="images/logo.jpeg" alt="Logo" class="logo">
+                <img src="images/logoPtimzd.jpeg" alt="Logo" class="logo">
             </div>
             <h1>Cueca Chilena: Un Legado que vive</h1>
             <button class="menu-btn">
